# locus-st7735s

./: CMakeCache.txt  CMakeLists.txt  STM32F051K8Ux_FLASH.ld  build.ninja  cmake_install.cmake  stm32f051k8ux_FLASH.ld
Core/Inc/: lcd.h  sync.h
Core/Inc/App/: Application.hpp  KvGrid.hpp  Lcd.hpp  TimeoutMs.hpp  main.h
Core/Inc/Graphics/: Display.hpp  Property.hpp  Render.hpp  Types.hpp  Widget.hpp
Core/Inc/Graphics/Prio/: Op.hpp  OpQueue.hpp
Core/Inc/Graphics/Ren/: Rectangle.hpp  Text.hpp
Core/Inc/Graphics/Wid/: BackgroundRectangle.hpp  FillDisplay.hpp  Grid.hpp  Slider.hpp  Text.hpp
Core/Inc/Lcs/: Info.hpp  Parser.hpp  Types.hpp
Core/Inc/Util/: CircularBuffer.hpp  CircularSwap.h  FastCrc8.hpp  PosArray.hpp
Core/Src/: gpio.c  lcd.c  lcdExample.cpp  main.c  spi.c  stm32f0xx_it.c  sync.cpp  usart.c
Core/Src/App/: Application.cpp  Lcd.cpp  TimeoutMs.cpp  main.cpp
Core/Src/Graphics/: Types.cpp  Widget.cpp
Core/Src/Graphics/Prio/: Op.cpp  OpQueue.cpp
Core/Src/Graphics/Ren/: Rectangle.cpp  Text.cpp
Core/Src/Graphics/Wid/: BackgroundRectangle.cpp  FillDisplay.cpp  Text.cpp
Core/Src/Lcs/: Info.cpp  Parser.cpp
Startup/: startup_stm32f051k8ux.s
cmake/: vscode_generated.cmake
libs/fonts/: README.md
libs/hagl/: cmake_install.cmake
libs/hagl/include/: hagl.h
libs/hagl/src/: hagl.c
libs/hagl_hal/: CMakeLists.txt  README.md  cmake_install.cmake  hagl_hal.cpp  hagl_hal.h
libs/st7735s/source/: st7735s.c  st7735s.h
